--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,7 @@ jobs:
       - name: Checkout KLEE UClibc source code
         uses: actions/checkout@v2
       - name: Checkout KLEE source code
+        uses: actions/checkout@v2
         with:
           repository: klee/klee
 
